# linux-networkinterfaces

./: .gitignore  README.md  __init__.py  exceptions.py  linuxnetworkinterfaces.py  networkinterfaces.py  pyproject.toml  setup.py
lib/: exceptions.py
src/: __init__.py  backend.py
